Edit Gemfile and add expired_at

--- a/short_url_service/docker-compose.yml
+++ b/short_url_service/docker-compose.yml
@@ -7,14 +7,10 @@ services:
     ports:
       - 3000:3000
     environment:
-      - SHORT_URL_DATABASE_USER=${SHORT_URL_DATABASE_USER}
-      - SHORT_URL_DATABASE_PASSWORD=${SHORT_URL_DATABASE_PASSWORD}
-      - SHORT_URL_DATABASE_HOST=${SHORT_URL_DATABASE_HOST}
-      - SHORT_URL_DATABASE=${SHORT_URL_DATABASE}
-      - REDIS_DB=${REDIS_DB}
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT}
-      - REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB}
+      - SHORT_URL_DATABASE_USER=postgres
+      - SHORT_URL_DATABASE_PASSWORD=12345678
+      - SHORT_URL_DATABASE_HOST=database
+      - SHORT_URL_DATABASE=short_url
       - RAILS_ENV=development
     volumes:
       - ./:/workspace
@@ -23,31 +19,6 @@ services:
     restart: on-failure
     depends_on:
       - database
-      - redis
-
-  # sidekiq:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   command: "bundle exec sidekiq -e development -C config/sidekiq.yml"
-  #   environment:
-  #     - SHORT_URL_DATABASE_USER=${SHORT_URL_DATABASE_USER}
-  #     - SHORT_URL_DATABASE_PASSWORD=${SHORT_URL_DATABASE_PASSWORD}
-  #     - SHORT_URL_DATABASE_HOST=${SHORT_URL_DATABASE_HOST}
-  #     - SHORT_URL_DATABASE=${SHORT_URL_DATABASE}
-  #     - REDIS_DB=${REDIS_DB}
-  #     - REDIS_HOST=${REDIS_HOST}
-  #     - REDIS_PORT=${REDIS_PORT}
-  #     - REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB}
-  #     - RAILS_ENV=development
-  #   volumes:
-  #     - ./:/workspace
-  #   networks:
-  #     - short-url-net-be
-  #   restart: on-failure
-  #   depends_on:
-  #     - database
-  #     - redis
 
   database:
     image: postgis/postgis:14-3.2-alpine
@@ -55,31 +26,16 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_DB=${SHORT_URL_DATABASE}
-      - POSTGRES_USER=${SHORT_URL_DATABASE_USER}
-      - POSTGRES_PASSWORD=${SHORT_URL_DATABASE_PASSWORD}
+      - POSTGRES_DB=short_url
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=12345678
     volumes:
       - postgres:/var/lib/postgresql/data
     networks:
       - short-url-net-be
-
-  redis:
-    image: "redis:6-alpine"
-    restart: on-failure
-    ports:
-      - 6379:6379
-    command: redis-server
-    networks:
-      - short-url-net-be
-    volumes:
-      - redis:/var/lib/redis
-      - redis-data:/data
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
 
 networks:
   short-url-net-be:
 
 volumes:
   postgres:
-  redis:
-  redis-data:
