--- a/short_url_service/docker-compose.yml
+++ b/short_url_service/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     ports:
       - 3000:3000
     environment:
-      - SHORT_URL_DATABASE_USER=postgres
-      - SHORT_URL_DATABASE_PASSWORD=12345678
-      - SHORT_URL_DATABASE_HOST=database
-      - SHORT_URL_DATABASE=short_url
-      - RAILS_ENV=development
+      - SHORT_URL_DATABASE_USER=${SHORT_URL_DATABASE_USER}
+      - SHORT_URL_DATABASE_PASSWORD=${SHORT_URL_DATABASE_PASSWORD}
+      - SHORT_URL_DATABASE_HOST=${SHORT_URL_DATABASE_HOST}
+      - SHORT_URL_DATABASE=${SHORT_URL_DATABASE}
+      - RAILS_ENV=production
     volumes:
       - ./:/workspace
     networks:
@@ -26,9 +26,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_DB=short_url
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=12345678
+      - POSTGRES_DB=${SHORT_URL_DATABASE}
+      - POSTGRES_USER=${SHORT_URL_DATABASE_USER}
+      - POSTGRES_PASSWORD=${SHORT_URL_DATABASE_PASSWORD}
     volumes:
       - postgres:/var/lib/postgresql/data
     networks:
